Finished rest request endpoint
