# api/v1/rest/router.go
@@ -3,5 +3,5 @@ package rest
 import "github.com/gorilla/mux"
 
 func RegisterRoutes(router *mux.Router) {
-
+	router.HandleFunc("/request", MakeRequest).Methods("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS")
 }
